# sanzi-audit-base

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/technical_rule_memory/: 00_overview.md  01_core_categories.md  02_boundary_rules.md  03_multilabel_and_fallback.md  04_usage_strategy.md  README.md
scripts/: README.md  classify_technical_rules_from_xlsx.py  extract_financial_elements_with_llm.py  extract_financial_management_to_csv.py  extract_major_issues_to_xlsx.py  merge_sheet_csvs.py
src/: __init__.py  config.py  logging_setup.py  main.py
src/llm/: client.py  prompts.py
src/pipeline/: aggregate.py  analyze.py  documents.py  extract.py  models.py
src/utils/: text.py
tests/: test_aggregate.py  test_classify_technical_rules_from_xlsx.py  test_extract.py  test_extract_major_issues_to_xlsx.py
